# cr-projects

./: .gitignore
c/: core.c  core.h  crsample.c  main.py  test.c
cpp/: CMakeLists.txt  check.py  oldcmake.txt  pycr.py  pytest.py
cpp/bindings/: bindings.cpp  s_bindings.cpp
cpp/crlib/include/: crnum.hpp  crobj.hpp  crsum.hpp
cpp/crlib/src/: crnum.cpp  crobj.cpp  crsum.cpp  test.cpp
cpp/include/: _ast.cpp  _ast.hpp  _astapi.h  arena.hpp  crexpr.cpp  crexpr.hpp  crnum.cpp  crnum.hpp  crobj.cpp  crobj.hpp  crprod.cpp  crprod.hpp  crsum.cpp  crsum.hpp  crtrig.hpp
cpp/src/: _ast.cpp  _astapi.cpp  crexpr.cpp  crnum.cpp  crobj.cpp  crprod.cpp  crsum.cpp  crtrig.cpp  test.cpp
cpp/storage/: crsample.py  tobyte.py
cpp/testing/: _ast.cpp  _ast.hpp  crexpr.cpp  crexpr.hpp  crnum.cpp  crnum.hpp  crobj.hpp  crprod.cpp  crprod.hpp  crsum.cpp  crsum.hpp  main.cpp  testing.cpp
ctest/: cr.cpp  cr.hpp
py/: cra.py
py/cr/: __init__.py  cr.py  parsing.py  scratch.py  sym.py
web/: bla.py  pycr.py  test.py
